--- a/style.css
+++ b/style.css
@@ -1228,6 +1228,13 @@ samp {
   unicode-bidi: bidi-override;
 }
 
+.navbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 10px;
+}
+
 .logo {
   font-weight: bold;
   font-size: 22px;
@@ -1237,6 +1244,71 @@ samp {
   display: flex;
   align-items: center;
   gap: 20px;
+}
+
+.links-pinned {
+  display: flex;
+  align-items: end;
+  margin-left: auto;
+  margin-right: 20px;
+  gap: 20px;
+}
+
+.links a {
+  text-decoration: none;
+  color: var(--grey-900);
+  font-size: 16px;
+}
+
+.burger-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.burger-menu span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: var(--grey-900);
+  margin-bottom: 5px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.burger-menu.active span:nth-child(1) {
+  transform: rotate(45deg) translate(6px, 5px);
+}
+
+.burger-menu.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.burger-menu.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -5px);
+}
+
+@media (max-width: 768px) {
+  .links {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    height: 89vh;
+    padding: 20px;
+    background-color: var(--grey-100);
+    top: 100px;
+    width: 100%;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(-100%);
+  }
+
+  .burger-menu {
+    display: block;
+    z-index: 999;
+  }
+
+  .show-menu .links {
+    transform: translateX(0);
+  }
 }
 
 .icon {
@@ -1267,21 +1339,14 @@ samp {
   padding: 15px;
 }
 
-.footerContainer {
+.footer-container {
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.navbarContainer {
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.themeToggleContainer {
+.theme-toggle-container {
   width: 52px;
   height: 24px;
   border: 1px solid #55cc8877;
