--- a/style.css
+++ b/style.css
@@ -1258,6 +1258,23 @@ samp {
   text-decoration: none;
   color: var(--grey-900);
   font-size: 16px;
+  position: relative;
+}
+
+.links a::after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--grey-900);
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.links a:hover::after {
+  transform: scaleX(1);
 }
 
 .burger-menu {
