--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
   --grey-500: #666666;
   --grey-600: #525252;
   --grey-700: #3d3d3d;
-  --grey-800: #292929;
-  --grey-900: #101010;
+  --grey-800: #2c2c2c;
+  --grey-900: #222222;
 
   --yellow-100: #fff3cd;
   --yellow-200: #ffe69c;
