--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
   --grey-500: #666666;
   --grey-600: #525252;
   --grey-700: #3d3d3d;
-  --grey-800: #2c2c2c;
-  --grey-900: #222222;
+  --grey-800: #292929;
+  --grey-900: #101010;
 
   --yellow-100: #fff3cd;
   --yellow-200: #ffe69c;
@@ -90,7 +90,9 @@
   --blue-700: #0f3550;
   --blue-800: #0a314d;
   --blue-900: #092030;
+}
 
+.light {
   background-color: var(--grey-100);
   color: var(--grey-900);
 }
@@ -175,6 +177,9 @@
   --blue-700: #2e86c5;
   --blue-800: #399ce2;
   --blue-900: #4eb1f8;
+
+  background-color: var(--grey-200);
+  color: var(--grey-900);
 }
 
 *,
