--- a/style.css
+++ b/style.css
@@ -1235,6 +1235,18 @@ samp {
   padding: 10px;
 }
 
+.navbar-container-fluid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  box-shadow: 0px 8px 16px 0px var(--grey-300);
+  padding: 10px;
+}
+
 .logo {
   font-weight: bold;
   font-size: 22px;
