--- a/style.css
+++ b/style.css
@@ -1323,10 +1323,10 @@ samp {
     display: flex;
     flex-direction: column;
     left: 0;
+    top: 0;
     height: 89vh;
     padding: 20px;
     background-color: var(--grey-100);
-    top: 100px;
     width: 100%;
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
