--- a/style.css
+++ b/style.css
@@ -427,227 +427,227 @@ body {
 }
 
 .bg-color-grey-100 {
-  background-color: var(--grey-100);
+  background-color: var(--grey-100) !important;
 }
 .bg-color-grey-200 {
-  background-color: var(--grey-200);
+  background-color: var(--grey-200) !important;
 }
 .bg-color-grey-300 {
-  background-color: var(--grey-300);
+  background-color: var(--grey-300) !important;
 }
 .bg-color-grey-400 {
-  background-color: var(--grey-400);
+  background-color: var(--grey-400) !important;
 }
 .bg-color-grey-500 {
-  background-color: var(--grey-500);
+  background-color: var(--grey-500) !important;
 }
 .bg-color-grey-600 {
-  background-color: var(--grey-600);
+  background-color: var(--grey-600) !important;
 }
 .bg-color-grey-700 {
-  background-color: var(--grey-700);
+  background-color: var(--grey-700) !important;
 }
 .bg-color-grey-800 {
-  background-color: var(--grey-800);
+  background-color: var(--grey-800) !important;
 }
 .bg-color-grey-900 {
-  background-color: var(--grey-900);
+  background-color: var(--grey-900) !important;
 }
 
 .bg-color-yellow-100 {
-  background-color: var(--yellow-100);
+  background-color: var(--yellow-100) !important;
 }
 .bg-color-yellow-200 {
-  background-color: var(--yellow-200);
+  background-color: var(--yellow-200) !important;
 }
 .bg-color-yellow-300 {
-  background-color: var(--yellow-300);
+  background-color: var(--yellow-300) !important;
 }
 .bg-color-yellow-400 {
-  background-color: var(--yellow-400);
+  background-color: var(--yellow-400) !important;
 }
 .bg-color-yellow-500 {
-  background-color: var(--yellow-500);
+  background-color: var(--yellow-500) !important;
 }
 .bg-color-yellow-600 {
-  background-color: var(--yellow-600);
+  background-color: var(--yellow-600) !important;
 }
 .bg-color-yellow-700 {
-  background-color: var(--yellow-700);
+  background-color: var(--yellow-700) !important;
 }
 .bg-color-yellow-800 {
-  background-color: var(--yellow-800);
+  background-color: var(--yellow-800) !important;
 }
 .bg-color-yellow-900 {
-  background-color: var(--yellow-900);
+  background-color: var(--yellow-900) !important;
 }
 
 .bg-color-orange-100 {
-  background-color: var(--orange-100);
+  background-color: var(--orange-100) !important;
 }
 .bg-color-orange-200 {
-  background-color: var(--orange-200);
+  background-color: var(--orange-200) !important;
 }
 .bg-color-orange-300 {
-  background-color: var(--orange-300);
+  background-color: var(--orange-300) !important;
 }
 .bg-color-orange-400 {
-  background-color: var(--orange-400);
+  background-color: var(--orange-400) !important;
 }
 .bg-color-orange-500 {
-  background-color: var(--orange-500);
+  background-color: var(--orange-500) !important;
 }
 .bg-color-orange-600 {
-  background-color: var(--orange-600);
+  background-color: var(--orange-600) !important;
 }
 .bg-color-orange-700 {
-  background-color: var(--orange-700);
+  background-color: var(--orange-700) !important;
 }
 .bg-color-orange-800 {
-  background-color: var(--orange-800);
+  background-color: var(--orange-800) !important;
 }
 .bg-color-orange-900 {
-  background-color: var(--orange-900);
+  background-color: var(--orange-900) !important;
 }
 
 .bg-color-pink-100 {
-  background-color: var(--pink-100);
+  background-color: var(--pink-100) !important;
 }
 .bg-color-pink-200 {
-  background-color: var(--pink-200);
+  background-color: var(--pink-200) !important;
 }
 .bg-color-pink-300 {
-  background-color: var(--pink-300);
+  background-color: var(--pink-300) !important;
 }
 .bg-color-pink-400 {
-  background-color: var(--pink-400);
+  background-color: var(--pink-400) !important;
 }
 .bg-color-pink-500 {
-  background-color: var(--pink-500);
+  background-color: var(--pink-500) !important;
 }
 .bg-color-pink-600 {
-  background-color: var(--pink-600);
+  background-color: var(--pink-600) !important;
 }
 .bg-color-pink-700 {
-  background-color: var(--pink-700);
+  background-color: var(--pink-700) !important;
 }
 .bg-color-pink-800 {
-  background-color: var(--pink-800);
+  background-color: var(--pink-800) !important;
 }
 .bg-color-pink-900 {
-  background-color: var(--pink-900);
+  background-color: var(--pink-900) !important;
 }
 
 .bg-color-cyan-100 {
-  background-color: var(--cyan-100);
+  background-color: var(--cyan-100) !important;
 }
 .bg-color-cyan-200 {
-  background-color: var(--cyan-200);
+  background-color: var(--cyan-200) !important;
 }
 .bg-color-cyan-300 {
-  background-color: var(--cyan-300);
+  background-color: var(--cyan-300) !important;
 }
 .bg-color-cyan-400 {
-  background-color: var(--cyan-400);
+  background-color: var(--cyan-400) !important;
 }
 .bg-color-cyan-500 {
-  background-color: var(--cyan-500);
+  background-color: var(--cyan-500) !important;
 }
 .bg-color-cyan-600 {
-  background-color: var(--cyan-600);
+  background-color: var(--cyan-600) !important;
 }
 .bg-color-cyan-700 {
-  background-color: var(--cyan-700);
+  background-color: var(--cyan-700) !important;
 }
 .bg-color-cyan-800 {
-  background-color: var(--cyan-800);
+  background-color: var(--cyan-800) !important;
 }
 .bg-color-cyan-900 {
-  background-color: var(--cyan-900);
+  background-color: var(--cyan-900) !important;
 }
 
 .bg-color-green-100 {
-  background-color: var(--green-100);
+  background-color: var(--green-100) !important;
 }
 .bg-color-green-200 {
-  background-color: var(--green-200);
+  background-color: var(--green-200) !important;
 }
 .bg-color-green-300 {
-  background-color: var(--green-300);
+  background-color: var(--green-300) !important;
 }
 .bg-color-green-400 {
-  background-color: var(--green-400);
+  background-color: var(--green-400) !important;
 }
 .bg-color-green-500 {
-  background-color: var(--green-500);
+  background-color: var(--green-500) !important;
 }
 .bg-color-green-600 {
-  background-color: var(--green-600);
+  background-color: var(--green-600) !important;
 }
 .bg-color-green-700 {
-  background-color: var(--green-700);
+  background-color: var(--green-700) !important;
 }
 .bg-color-green-800 {
-  background-color: var(--green-800);
+  background-color: var(--green-800) !important;
 }
 .bg-color-green-900 {
-  background-color: var(--green-900);
+  background-color: var(--green-900) !important;
 }
 
 .bg-color-red-100 {
-  background-color: var(--red-100);
+  background-color: var(--red-100) !important;
 }
 .bg-color-red-200 {
-  background-color: var(--red-200);
+  background-color: var(--red-200) !important;
 }
 .bg-color-red-300 {
-  background-color: var(--red-300);
+  background-color: var(--red-300) !important;
 }
 .bg-color-red-400 {
-  background-color: var(--red-400);
+  background-color: var(--red-400) !important;
 }
 .bg-color-red-500 {
-  background-color: var(--red-500);
+  background-color: var(--red-500) !important;
 }
 .bg-color-red-600 {
-  background-color: var(--red-600);
+  background-color: var(--red-600) !important;
 }
 .bg-color-red-700 {
-  background-color: var(--red-700);
+  background-color: var(--red-700) !important;
 }
 .bg-color-red-800 {
-  background-color: var(--red-800);
+  background-color: var(--red-800) !important;
 }
 .bg-color-red-900 {
-  background-color: var(--red-900);
+  background-color: var(--red-900) !important;
 }
 
 .bg-color-blue-100 {
-  background-color: var(--blue-100);
+  background-color: var(--blue-100) !important;
 }
 .bg-color-blue-200 {
-  background-color: var(--blue-200);
+  background-color: var(--blue-200) !important;
 }
 .bg-color-blue-300 {
-  background-color: var(--blue-300);
+  background-color: var(--blue-300) !important;
 }
 .bg-color-blue-400 {
-  background-color: var(--blue-400);
+  background-color: var(--blue-400) !important;
 }
 .bg-color-blue-500 {
-  background-color: var(--blue-500);
+  background-color: var(--blue-500) !important;
 }
 .bg-color-blue-600 {
-  background-color: var(--blue-600);
+  background-color: var(--blue-600) !important;
 }
 .bg-color-blue-700 {
-  background-color: var(--blue-700);
+  background-color: var(--blue-700) !important;
 }
 .bg-color-blue-800 {
-  background-color: var(--blue-800);
+  background-color: var(--blue-800) !important;
 }
 .bg-color-blue-900 {
-  background-color: var(--blue-900);
+  background-color: var(--blue-900) !important;
 }
 
 .alert {
