--- a/style.css
+++ b/style.css
@@ -1355,14 +1355,14 @@ samp {
 }
 
 .container {
-    max-width: 1366px;
-    min-height: 100vh;
-    margin: 0 auto;
-    padding-top: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+  max-width: 1366px;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .container-fluid {
   width: 100%;
