--- a/style.css
+++ b/style.css
@@ -1358,7 +1358,7 @@ samp {
   max-width: 1366px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 60px;
+  padding-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
