--- a/style.css
+++ b/style.css
@@ -1330,6 +1330,7 @@ samp {
     width: 100%;
     transition: transform 0.3s ease-in-out;
     transform: translateX(-100%);
+    z-index: 998;
   }
 
   .burger-menu {
