--- a/style.css
+++ b/style.css
@@ -1401,35 +1401,39 @@ samp {
 .carousel-inner {
   justify-content: center;
   width: 1000px;
-  height: 500px;
-  display: flex;
+  height: 0; 
+  padding-bottom: 60%; 
   position: relative;
   overflow: hidden;
 }
 
 .carousel-item {
   position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0;
   transition: all 0.3s linear;
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-item.active {
-  transform: translate(0);
   opacity: 1;
 }
 
 .carousel-item.next {
-  transform: translate(-100%);
+  transform: translateX(100%);
 }
 
 .carousel-item.prev {
-  transform: translate(100%);
+  transform: translateX(-100%);
 }
 
 .carousel-item img {
   display: block;
   width: 100%;
-  object-fit: cover;
+  height: 100%;
+  object-fit: contain;
 }
 
 .carousel-indicators {
