--- a/style.css
+++ b/style.css
@@ -1515,6 +1515,12 @@ samp {
   transition: 0.3s;
 }
 
+.input input:not(:placeholder-shown) + label {
+  top: -20px;
+  font-size: 12px;
+  color: #4d90fe;
+}
+
 .input input:focus {
   border-color: #4d90fe;
   outline: none;
