--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
