--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Times New Roman", Times, serif, "Courier New", monospace;
   font-size: 16px;
   line-height: 1.5;
 }
