--- a/style.css
+++ b/style.css
@@ -3490,6 +3490,7 @@ samp {
 .overflow-scroll {
   overflow: scroll !important;
 }
+
 .d-inline {
   display: inline !important;
 }
@@ -3500,7 +3501,16 @@ samp {
   display: block !important;
 }
 .d-grid {
-  display: grid;
+  display: grid !important;
+}
+.d-table {
+  display: table !important;
+}
+.d-table-row {
+  display: table-row !important;
+}
+.d-table-cell {
+  display: table-cell !important;
 }
 .d-flex {
   display: flex !important;
@@ -3511,6 +3521,7 @@ samp {
 .d-none {
   display: none !important;
 }
+
 .position-static {
   position: static !important;
 }
@@ -3526,6 +3537,71 @@ samp {
 .position-sticky {
   position: -webkit-sticky !important;
   position: sticky !important;
+}
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+.fixed-bottom {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+.sticky-top {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1020;
+}
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.flex-fill {
+  flex: 1 1 auto !important;
+}
+.flex-row {
+  flex-direction: row !important;
+}
+.flex-column {
+  flex-direction: column !important;
+}
+.flex-row-reverse {
+  flex-direction: row-reverse !important;
+}
+.flex-column-reverse {
+  flex-direction: column-reverse !important;
+}
+.flex-grow-0 {
+  flex-grow: 0 !important;
+}
+.flex-grow-1 {
+  flex-grow: 1 !important;
+}
+.flex-shrink-0 {
+  flex-shrink: 0 !important;
+}
+.flex-shrink-1 {
+  flex-shrink: 1 !important;
+}
+.flex-wrap {
+  flex-wrap: wrap !important;
+}
+.flex-nowrap {
+  flex-wrap: nowrap !important;
+}
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse !important;
 }
 
 .fst-italic {
@@ -3587,10 +3663,9 @@ samp {
   word-break: break-word !important;
 }
 
-.fw-wrap {
-  flex-wrap: wrap;
+.visible {
+  visibility: visible !important;
 }
-
-.fw-no-wrap {
-  flex-wrap: nowrap;
+.invisible {
+  visibility: hidden !important;
 }
