--- a/style.css
+++ b/style.css
@@ -1607,6 +1607,19 @@ samp {
   object-fit: contain;
 }
 
+.avatar {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .input {
   display: inline-block;
   position: relative;
