--- a/style.css
+++ b/style.css
@@ -1386,8 +1386,12 @@ samp {
 
 .container-fluid {
   width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 15px;
+  padding: 60px 30px 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .footer-container {
