--- a/style2.css
+++ b/style2.css
@@ -27,7 +27,7 @@ a {
 .container {
   min-height: 100vh;
   margin: 0 auto;
-  padding: 80px 0 40px 0;
+  padding: 6rem 0 2.5rem 0;
   display: flex;
   justify-content: center;
 }
@@ -494,8 +494,9 @@ a {
 }
 
 .input {
-  display: inline-block;
+  display: flex;
   position: relative;
+  width: 100%;
 }
 
 .input input {
@@ -537,6 +538,7 @@ a {
 
 .input textarea {
   padding: 10px;
+  width: 100%;
   font-size: 16px;
   border: 1px solid #aaaaaa;
   border-radius: 16px;
