--- a/v2/navbar.css
+++ b/v2/navbar.css
@@ -112,14 +112,14 @@
     display: flex;
     flex-direction: column;
     left: 0;
-    top: 0;
+    top: 6.1rem;
     height: 100vh;
     padding: 20px;
     background-color: #ffffff;
     width: 100%;
     transition: transform 0.2s ease-in-out;
     transform: translateX(-100%);
-    z-index: 998;
+    z-index: 997;
   }
 
   .burger-menu {
