--- a/v2/grid.css
+++ b/v2/grid.css
@@ -1,6 +1,12 @@
-.container {
+.container-fluid {
   min-height: 100svh;
   margin: 0 auto;
+  padding: 6rem 0 2.5rem 0;
+}
+
+.container {
+  min-height: 100svh;
+  max-width: 1200px;
   padding: 6rem 0 2.5rem 0;
 }
 
@@ -8,8 +14,8 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 8px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 2rem;
+  margin-left: 2rem;
 }
 
 .row > * {
