--- a/v2/navbar.css
+++ b/v2/navbar.css
@@ -1,4 +1,4 @@
-.navbar-container {
+.navbar {
   position: fixed;
   width: 100%;
   display: flex;
@@ -11,7 +11,7 @@
   z-index: 998;
 }
 
-.logo {
+.brand {
   text-decoration: none;
   color: inherit;
   font-weight: bold;
