--- a/v2/base.css
+++ b/v2/base.css
@@ -15,8 +15,8 @@ body {
 
 body {
   font-family: "Times New Roman", Times, serif, "Courier New", monospace;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: #324353;
 }
 
