--- a/v2/text.css
+++ b/v2/text.css
@@ -1,39 +1,110 @@
+.fsize-1 {
+  font-size: 0.75rem;
+}
+.fsize-2 {
+  font-size: 1rem;
+}
+.fsize-3 {
+  font-size: 1.25rem;
+}
+.fsize-4 {
+  font-size: 1.5rem;
+}
+.fsize-5 {
+  font-size: 1.75rem;
+}
+.fsize-6 {
+  font-size: 2rem;
+}
+.fsize-7 {
+  font-size: 2.25rem;
+}
+.fsize-8 {
+  font-size: 2.5rem;
+}
+.fsize-9 {
+  font-size: 2.75rem;
+}
+.fsize-10 {
+  font-size: 3rem;
+}
+.fsize-11 {
+  font-size: 3.25rem;
+}
+.fsize-12 {
+  font-size: 3.5rem;
+}
+
+.font-serif {
+  font-family: "Times New Roman", Times, serif;
+}
+.font-sans-serif {
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+}
+.font-monospace {
+  font-family: "Courier New", Courier, monospace;
+}
+.font-fantasy {
+  font-family: "Comic Sans MS", "Papyrus", fantasy, cursive, sans-serif;
+}
+.font-code {
+  font-family: "Courier New", Courier, monospace;
+}
+.font-handwriting {
+  font-family: "Lucida Handwriting", "Courier New", Courier, cursive, monospace;
+}
+.font-modern {
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, sans-serif;
+}
+
 .text-start {
-  text-align: left !important;
+  text-align: left;
 }
 .text-end {
-  text-align: right !important;
+  text-align: right;
 }
 .text-center {
-  text-align: center !important;
+  text-align: center;
 }
-.text-decoration-none {
-  text-decoration: none !important;
+.text-unset {
+  text-align: unset;
 }
-.text-decoration-underline {
-  text-decoration: underline !important;
+.text-inherit {
+  text-align: inherit;
 }
-.text-decoration-line-through {
-  text-decoration: line-through !important;
+
+.text-none {
+  text-decoration: none;
 }
+.text-underline {
+  text-decoration: underline;
+}
+.text-line-through {
+  text-decoration: line-through;
+}
+.text-overline {
+  text-decoration: overline;
+}
+
 .text-lowercase {
-  text-transform: lowercase !important;
+  text-transform: lowercase;
 }
 .text-uppercase {
-  text-transform: uppercase !important;
+  text-transform: uppercase;
 }
 .text-capitalize {
-  text-transform: capitalize !important;
+  text-transform: capitalize;
 }
+
 .text-wrap {
-  white-space: normal !important;
+  white-space: normal;
 }
 .text-nowrap {
-  white-space: nowrap !important;
+  white-space: nowrap;
 }
 .text-break {
-  word-wrap: break-word !important;
-  word-break: break-word !important;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .text-truncate {
@@ -41,7 +112,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .text-truncate-2 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -49,39 +119,34 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-3 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-4 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 4;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-5 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 5;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-6 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 6;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-7 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -89,27 +154,38 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-8 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 8;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-9 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 9;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .text-truncate-10 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 10;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.text-truncate-11 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 11;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.text-truncate-12 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 12;
   overflow: hidden;
   text-overflow: ellipsis;
 }
