--- a/v2/base.css
+++ b/v2/base.css
@@ -16,7 +16,7 @@ body {
 body {
   font-family: "Times New Roman", Times, serif, "Courier New", monospace;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.5;
   color: #324353;
 }
 
