--- a/v2/text.css
+++ b/v2/text.css
@@ -34,6 +34,42 @@
 .fsize-12 {
   font-size: 3.5rem;
 }
+.fsize-13 {
+  font-size: 3.75rem;
+}
+.fsize-14 {
+  font-size: 4rem;
+}
+.fsize-15 {
+  font-size: 4.25rem;
+}
+.fsize-16 {
+  font-size: 4.5rem;
+}
+.fsize-17 {
+  font-size: 4.75rem;
+}
+.fsize-18 {
+  font-size: 5rem;
+}
+.fsize-19 {
+  font-size: 5.25rem;
+}
+.fsize-20 {
+  font-size: 5.5rem;
+}
+.fsize-21 {
+  font-size: 5.75rem;
+}
+.fsize-22 {
+  font-size: 6rem;
+}
+.fsize-23 {
+  font-size: 6.25rem;
+}
+.fsize-24 {
+  font-size: 6.5rem;
+}
 
 .font-serif {
   font-family: "Times New Roman", Times, serif;
