--- a/v2/border.css
+++ b/v2/border.css
@@ -1,3 +1,167 @@
-.border-bottom-2 {
-  border-bottom: 2px solid #999999;
+.b-0 {
+  border: 0 solid #000;
+}
+.b-1 {
+  border: 0.1rem solid #000;
+}
+.b-2 {
+  border: 0.2rem solid #000;
+}
+.b-3 {
+  border: 0.4rem solid #000;
+}
+.b-4 {
+  border: 0.6rem solid #000;
+}
+.b-5 {
+  border: 0.8rem solid #000;
+}
+.b-6 {
+  border: 1rem solid #000;
+}
+
+.b-t-0 {
+  border-top: 0 solid #000;
+}
+.b-t-1 {
+  border-top: 0.1rem solid #000;
+}
+.b-t-2 {
+  border-top: 0.2rem solid #000;
+}
+.b-t-3 {
+  border-top: 0.4rem solid #000;
+}
+.b-t-4 {
+  border-top: 0.6rem solid #000;
+}
+.b-t-5 {
+  border-top: 0.8rem solid #000;
+}
+.b-t-6 {
+  border-top: 1rem solid #000;
+}
+
+.b-l-0 {
+  border-left: 0 solid #000;
+}
+.b-l-1 {
+  border-left: 0.1rem solid #000;
+}
+.b-l-2 {
+  border-left: 0.2rem solid #000;
+}
+.b-l-3 {
+  border-left: 0.4rem solid #000;
+}
+.b-l-4 {
+  border-left: 0.6rem solid #000;
+}
+.b-l-5 {
+  border-left: 0.8rem solid #000;
+}
+.b-l-6 {
+  border-left: 1rem solid #000;
+}
+
+.b-r-0 {
+  border-right: 0 solid #000;
+}
+.b-r-1 {
+  border-right: 0.1rem solid #000;
+}
+.b-r-2 {
+  border-right: 0.2rem solid #000;
+}
+.b-r-3 {
+  border-right: 0.4rem solid #000;
+}
+.b-r-4 {
+  border-right: 0.6rem solid #000;
+}
+.b-r-5 {
+  border-right: 0.8rem solid #000;
+}
+.b-r-6 {
+  border-right: 1rem solid #000;
+}
+
+.b-b-0 {
+  border-bottom: 0 solid #000;
+}
+.b-b-1 {
+  border-bottom: 0.1rem solid #000;
+}
+.b-b-2 {
+  border-bottom: 0.2rem solid #000;
+}
+.b-b-3 {
+  border-bottom: 0.4rem solid #000;
+}
+.b-b-4 {
+  border-bottom: 0.6rem solid #000;
+}
+.b-b-5 {
+  border-bottom: 0.8rem solid #000;
+}
+.b-b-6 {
+  border-bottom: 1rem solid #000;
+}
+
+.b-x-0 {
+  border-left: 0 solid #000;
+  border-right: 0 solid #000;
+}
+.b-x-1 {
+  border-left: 0.1rem solid #000;
+  border-right: 0.1rem solid #000;
+}
+.b-x-2 {
+  border-left: 0.2rem solid #000;
+  border-right: 0.2rem solid #000;
+}
+.b-x-3 {
+  border-left: 0.4rem solid #000;
+  border-right: 0.4rem solid #000;
+}
+.b-x-4 {
+  border-left: 0.6rem solid #000;
+  border-right: 0.6rem solid #000;
+}
+.b-x-5 {
+  border-left: 0.8rem solid #000;
+  border-right: 0.8rem solid #000;
+}
+.b-x-6 {
+  border-left: 1rem solid #000;
+  border-right: 1rem solid #000;
+}
+
+.b-y-0 {
+  border-top: 0 solid #000;
+  border-bottom: 0 solid #000;
+}
+.b-y-1 {
+  border-top: 0.1rem solid #000;
+  border-bottom: 0.1rem solid #000;
+}
+.b-y-2 {
+  border-top: 0.2rem solid #000;
+  border-bottom: 0.2rem solid #000;
+}
+.b-y-3 {
+  border-top: 0.4rem solid #000;
+  border-bottom: 0.4rem solid #000;
+}
+.b-y-4 {
+  border-top: 0.6rem solid #000;
+  border-bottom: 0.6rem solid #000;
+}
+.b-y-5 {
+  border-top: 0.8rem solid #000;
+  border-bottom: 0.8rem solid #000;
+}
+.b-y-6 {
+  border-top: 1rem solid #000;
+  border-bottom: 1rem solid #000;
 }
