--- a/v2/color.css
+++ b/v2/color.css
@@ -119,15 +119,15 @@
   --darkcyan-800: #175c53;
   --darkcyan-900: #174943;
 
-  --teal-100: #8cc5af;
-  --teal-200: #75ba9f;
-  --teal-300: #5bae90;
-  --teal-400: #3fa382;
-  --teal-500: #149773;
-  --teal-600: #188566;
-  --teal-700: #1a7459;
-  --teal-800: #1b624c;
-  --teal-900: #1a5240;
+  --teal-100: #83b5b4;
+  --teal-200: #63a3a3;
+  --teal-300: #3f9291;
+  --teal-400: #008080;
+  --teal-500: #0e6d6d;
+  --teal-600: #145a5a;
+  --teal-700: #154848;
+  --teal-800: #153737;
+  --teal-900: #122726;
 
   --darkgreen-100: #6c9b5f;
   --darkgreen-200: #578d4a;
