--- a/v2/navbar.css
+++ b/v2/navbar.css
@@ -3,29 +3,37 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   box-shadow: 0px 8px 16px 0px #2c3e5055;
   padding: 1rem;
   background-color: #ffffffaa;
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(0.2rem);
   z-index: 998;
 }
-
 .brand {
   text-decoration: none;
   color: inherit;
   font-weight: bold;
   font-size: 22px;
   padding-left: 2rem;
-  margin-right: auto;
+  margin-right: 0;
   color: #000000;
 }
-
 .links {
   display: flex;
   align-items: center;
   gap: 20px;
   padding-right: 5rem;
+}
+.links.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+.links.left {
+  margin-right: auto;
+}
+.links.right {
+  margin-left: auto;
 }
 
 .link {
@@ -112,25 +120,24 @@
     display: flex;
     flex-direction: column;
     left: 0;
-    top: 6.1rem;
+    top: 6rem;
     height: 100vh;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: #ffffffaa;
+    backdrop-filter: blur(0.2rem);
     width: 100%;
+    border-top: 0.1rem #000000 solid;
     transition: transform 0.2s ease-in-out;
     transform: translateX(-100%);
     z-index: 997;
   }
-
   .burger-menu {
     display: block;
     z-index: 999;
   }
-
   .burger-menu.active {
-    position: fixed;
+    position: relative;
   }
-
   .show-menu.links {
     transform: translateX(0);
   }
