primary color init

--- a/v2/color.css
+++ b/v2/color.css
@@ -1,4 +1,7 @@
 :root {
+  --c-primary: #008888;
+  --bg-primary: #ffffff;
+
   --black-100: #ffffff;
   --black-200: #dbdbdb;
   --black-300: #b9b9b9;
