--- a/v2/sidebar.css
+++ b/v2/sidebar.css
@@ -21,7 +21,7 @@
 .sidebar-link {
   text-decoration: none;
   color: inherit;
-  padding: 10px;
+  padding: 0.25rem 1.5rem;
   transition: background-color 0.3s;
 }
 
